--- a/Index.html
+++ b/Index.html
@@ -16,29 +16,13 @@
 	<div id="divCenter">asasSA
 		<div class="cls1 easeAnimObj">cls1
 		</div>
+				<div class="cls1 easeAnimObj">cls1
+		</div>
 		<div class="cls2 bgAnimObj">class2
 		</div>
 		<div class="cls3 easeAnimObj">k3
 		</div>	
 		<div id="divDown">
-					<div id='wrapper'>
-				<div class='cool_btn1 green'>
-						<h1 class='top'>126 <i>Plays</i></h1>
-						<h2>H</h2>
-					</div>
-					<div class='cool_btn1 teal'>
-						<h1 class='top'>10k <i>Likes</i></h1>
-						<h2>U</h2>
-					</div>
-					<div class='cool_btn1 blue'>
-						<h1 class='top'>240 <i>Likes</i></h1>
-						<h2>G</h2>
-					</div>
-					<div class='cool_btn1 orange'>
-						<h1 class='top'>21k <i>Points</i></h1>
-						<h2>)</h2>
-					</div>
-				</div>
 	</div>
 	</div>
 
